# rlsgraph

./: .gitignore  404.html  LICENSE  README.md  dummy.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  storage.csv
LICENSE/: index.html
api-reference/edge/base_egde/: index.html
api-reference/graph/base-graph/: index.html
api-reference/graph/dag/: index.html
api-reference/node/base-node/: index.html
api-reference/node/end-node/: index.html
api-reference/node/node/: index.html
api-reference/node/start-node/: index.html
config/: confing.yaml  dag_without_values copy.yaml  dag_without_values.yaml  default_config.yaml
docs/: index.md
docs/api-reference/: dag.md  node.md
docs/api-reference/graph/: dag.md
docs/api-reference/node/: base-node.md  end-node.md  node.md  start-node.md
docs/user-guide/: index.md  installation.md
docs/user-guide/examples/: math.ipynb  numpy.ipynb
docs/user-guide/examples/configs/08-03-2023_18-14/: config.yaml  storage.csv
docs/user-guide/examples/configs/08-03-2023_18-16/: config.yaml  storage.csv
docs/user-guide/examples/configs/08-03-2023_18-39/: config.yaml  storage.csv
docs/user-guide/examples/configs/08-03-2023_18-51/: config.yaml  storage.csv
docs/user-guide/examples/configs/08-03-2023_18-52/: config.yaml  storage.csv
docs/user-guide/tutorials/: create-dag-from-config.md  create-dag-from-scratch.md  merging-multimple-dags.md
examples/: config_init.ipynb  manual_init.ipynb  merging_dags.ipynb  notebook.ipynb
scidag/: __init__.py
scidag/core/: __init__.py  base.py  dag.py  edge.py  node.py  task.py  variable.py
scidag/core/edge/: edge.py  hook.py
scidag/core/graph/: dag.py
scidag/core/hooks/: hook.py
scidag/core/node/: __init__.py  base.py  build.py  end_node.py  node.py  nodes.py  start_node.py
scidag/core/struct/: variable.py
scidag/storage/: __init__.py  base.py  build.py  csv_storage.py  db_storage.py  dict_storage.py  mongo_storage.py  redis_storage.py
scidag/utils/: __init__.py  algo.py  conf.py  configurable.py  create_path.py  registry.py  runnable.py  storage.py  types.py
search/: search_index.json
test/: test_core.py
test/core/: test_dag.py  test_node.py  test_task.py
test/storage/: csv_storage_test.py  storage_test.py
test/utils/: test_configurable.py  test_storage.py
user-guide/: index.html
user-guide/examples/configs/27-02-2023_18-34/: config.yaml  storage.csv
user-guide/examples/math/: index.html
user-guide/examples/numpy/: index.html
user-guide/installation/: index.html
user-guide/tutorials/create-dag-from-config/: index.html
user-guide/tutorials/create-dag-from-scratch/: index.html
user-guide/tutorials/merging-multimple-dags/: index.html
(+6 files in other folders)
