[tool.poetry]
name = "scidag"
version = "0.0.1"
description = "Manage your scientific workflow with a dags"
authors = ["markmno <nosanmark@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.1"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
isort = "^5.11.4"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
