[tool.poetry]
name = "scidag"
version = "0.0.1"
description = "Manage your scientific workflow with a dags with ease"
authors = ["markmno <nosanmark@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hydra-zen = "^0.9.1"
uvloop = "^0.17.0"
pandas = "^1.5.3"
pydantic = "^1.10.5"

[tool.poetry.group.sql_db]
optional=true

[tool.poetry.group.sql_db.dependencies]
sqlalchemy = "^2.0.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
isort = "^5.11.4"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
nest-asyncio = "^1.5.6"
ipykernel = "^6.20.2"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = "^4.5.1"
redis-om = "^0.1.2"

[tool.poetry.group.mongo]
optional = true

[tool.poetry.group.mongo.dependencies]
motor = "^3.1.1"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.14"
mkdocs-mermaid2-plugin = "^0.6.0"
# mkdocstrings-python = "^0.8.3"
mknotebooks = "^0.7.1"
pytkdocs = "^0.16.1"
mkdocs-simple-plugin = "^2.3.0"
mkdocstrings-python-legacy = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"